--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="style.css" />
     <title>Az-Porto</title>
   </head>
@@ -37,7 +37,7 @@
     <!-- Navbar End -->
     <!-- Jumbotron Start -->
     <section class="jumbotron text-center">
-      <img src="/logo.png" alt="Az-Porto" width="250" class="rounded-circle mt-4" />
+      <img src="/img/logo.png" alt="Az-Porto" width="250" class="rounded-circle mt-4" />
       <h1 class="display-4 text-light mt-2"><strong>Azhar Aufa</strong></h1>
       <p class="lead text-light">Learn Coding</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -83,7 +83,7 @@
           <div class="row justify-content-center mt-4">
             <div class="col-md-4 mb-3">
               <div class="card">
-                <img src="/hack.jpg" class="card-img-top" alt="..." />
+                <img src="/img/hack.jpg" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <p class="card-text">Coding adalah jalan begadangku</p>
                 </div>
@@ -91,7 +91,7 @@
             </div>
             <div class="col-md-4 mb-3">
               <div class="card">
-                <img src="/cyber.jpg" class="card-img-top" alt="..." />
+                <img src="/img/cyber.jpg" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <p class="card-text">Meretas adalah seni kehidupan</p>
                 </div>
@@ -99,7 +99,7 @@
             </div>
             <div class="col-md-4 mb-3">
               <div class="card">
-                <img src="/uday.jpg" class="card-img-top" alt="..." />
+                <img src="/img/uday.jpg" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <p class="card-text">Keyboard adalah teman terbaikku.</p>
                 </div>
