mengubah ke unsplash

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- Navbar End -->
     <!-- Jumbotron Start -->
     <section class="jumbotron text-center">
-      <img src="../img/logo.png" alt="Az-Porto" width="250" class="rounded-circle mt-4" />
+      <img src="/img/logo.png" alt="Az-Porto" width="250" class="rounded-circle mt-4" />
       <h1 class="display-4 text-light mt-2"><strong>Azhar Aufa</strong></h1>
       <p class="lead text-light">Learn Coding</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -83,7 +83,7 @@
           <div class="row justify-content-center mt-4">
             <div class="col-md-4 mb-3">
               <div class="card">
-                <img src="/img/hack.jpg" class="card-img-top" alt="..." />
+                <img src="https://unsplash.com/photos/dYEuFB8KQJk" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <p class="card-text">Coding adalah jalan begadangku</p>
                 </div>
