mengubah garis miring

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- Navbar End -->
     <!-- Jumbotron Start -->
     <section class="jumbotron text-center">
-      <img src="/img/logo.png" alt="Az-Porto" width="250" class="rounded-circle mt-4" />
+      <img src="Img/logo.png" alt="Az-Porto" width="250" class="rounded-circle mt-4" />
       <h1 class="display-4 text-light mt-2"><strong>Azhar Aufa</strong></h1>
       <p class="lead text-light">Learn Coding</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
