--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <div class="row justify-content-center mt-4">
             <div class="col-md-4 mb-3">
               <div class="card">
-                <img src="https://unsplash.com/photos/dYEuFB8KQJk" class="card-img-top" alt="..." />
+                <img src="img/hack.jpg" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <p class="card-text">Coding adalah jalan begadangku</p>
                 </div>
@@ -91,7 +91,7 @@
             </div>
             <div class="col-md-4 mb-3">
               <div class="card">
-                <img src="/img/cyber.jpg" class="card-img-top" alt="..." />
+                <img src="img/cyber.jpg" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <p class="card-text">Meretas adalah seni kehidupan</p>
                 </div>
@@ -99,7 +99,7 @@
             </div>
             <div class="col-md-4 mb-3">
               <div class="card">
-                <img src="/img/uday.jpg" class="card-img-top" alt="..." />
+                <img src="img/uday.jpg" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <p class="card-text">Keyboard adalah teman terbaikku.</p>
                 </div>
