mengubah teks priciple

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         </div>
         <div class="row justify-content-center mt-4 fs-5 text-center">
           <div class="col-md-4">
-            <p>Belajar Bahasa Pemrograman. Berkarir Menjadi Seorang <i>Web Developer</i> Profesional</p>
+            <p>Belajar Bahasa Pemrograman. Berkarir Menjadi Seorang <i>Web Developer</i>.</p>
           </div>
-          <div class="col-md-4">Ujung-ujungnya Butuh Duit. Oleh Karena Itu Mari Bekerja Mencari Nafkah Biar Hidup Tidak Merepotkan Orang Tua</div>
+          <div class="col-md-4">Ujung-ujungnya Butuh Duit.</div>
         </div>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -93,7 +93,7 @@
               <div class="card">
                 <img src="img/cyber.jpg" class="card-img-top" alt="..." />
                 <div class="card-body">
-                  <p class="card-text">Meretas adalah seni kehidupan</p>
+                  <p class="card-text">Keamanan adalah hal pertama yang perlu diamankan</p>
                 </div>
               </div>
             </div>
@@ -128,15 +128,15 @@
             <div class="col-md-6">
               <form>
                 <div class="text-start mb-3">
-                  <label for="name" class="form-label">Nama Lengkap</label>
+                  <label for="name" class="form-label">Namamu</label>
                   <input type="text" class="form-control" id="name" aria-describedby="name" />
                 </div>
                 <div class="text-start mb-3">
-                  <label for="email" class="form-label">Email</label>
+                  <label for="email" class="form-label">Emailmu</label>
                   <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="email" />
                 </div>
                 <div class="text-start mb-3">
-                  <label for="exampleFormControlTextarea1" class="form-label">Pesan</label>
+                  <label for="exampleFormControlTextarea1" class="form-label">Tulis Pesan Untukku</label>
                   <textarea class="form-control" id="pesan" rows="3"></textarea>
                 </div>
                 <button type="submit" class="d-md-flex btn btn-primary">Kirim</button>
