--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg navbar-dark shadow-lg fixed-top" style="background-color: rgb(4, 53, 82)">
       <div class="container">
-        <a class="navbar-brand" href="#">Az Porto</a>
+        <a class="navbar-brand" href="#">Az Portofolio</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
