--- a/index.html
+++ b/index.html
@@ -1,127 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- UNICONS -->
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css" />
     <!-- CSS -->
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
     <!-- Add favicon -->
-    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon" />
+    <!-- Link Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
     <title>Az-Porto | Azhar Aufa</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <!-- --------------- HEADER --------------- -->
-        <nav id="header">
-            <div class="nav-logo">
-                <p class="nav-name">Az Porto</p>
-            </div>
-            <div class="nav-menu" id="myNavMenu">
-                <ul class="nav_menu_list">
-                    <li class="nav_list">
-                        <a href="#home" class="nav-link active-link">Home</a>
-                        <div class="circle"></div>
-                    </li>
-                    <li class="nav_list">
-                        <a href="#about" class="nav-link">About</a>
-                        <div class="circle"></div>
-                    </li>
-                    <li class="nav_list">
-                        <a href="#projects" class="nav-link">Projects</a>
-                        <div class="circle"></div>
-                    </li>
-                    <li class="nav_list">
-                        <a href="#contact" class="nav-link">Contact</a>
-                        <div class="circle"></div>
-                    </li>
-                </ul>
-            </div>
-            <!-- <div class="nav-button">
+      <!-- --------------- HEADER --------------- -->
+      <nav id="header">
+        <div class="nav-logo">
+          <p class="nav-name">Az Porto</p>
+        </div>
+
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="drop">
+            Dropdown
+          </button>
+          <ul class="dropdown-menu">
+            <li><a href="#projects" class="dropdown-item" type="button">Home</a></li>
+            <li><a href="#projects" class="dropdown-item" type="button">About</a></li>
+            <li><a href="#projects" class="dropdown-item" type="button">Projects</a></li>
+            <li><a href="#projects" class="dropdown-item" type="button">Contact</a></li>
+          </ul>
+        </div>
+        
+        <!-- <div class="nav-button">
                 <button class="btn">Download CV <i class="uil uil-file-alt"></i></button>
             </div>
             <div class="nav-menu-btn">
                 <i class="uil uil-bars" onclick="myMenuFunction()"></i>
             </div> -->
-        </nav>
+      </nav>
 
-
-        <!-- -------------- MAIN ---------------- -->
-        <main class="wrapper">
-            <!-- -------------- FEATURED BOX ---------------- -->
-            <section class="featured-box" id="home">
-                <div class="featured-text">
-                    <div class="featured-text-card">
-                        <span>Azhar Aufa</span>
-                    </div>
-                    <div class="featured-name">
-                        <p>I'm <span class="code">Code Diver</span></p>
-                    </div>
-                    <div class="featured-text-info">
-                        <p>Currently learning programming in Codepolitan
-                          and Web Programming Unpas.
-                        </p>
-                    </div>
-                    <!-- <div class="featured-text-btn">
+      <!-- -------------- MAIN ---------------- -->
+      <main class="wrapper">
+        <!-- -------------- FEATURED BOX ---------------- -->
+        <section class="featured-box" id="home">
+          <div class="featured-text">
+            <div class="featured-text-card">
+              <span>Azhar Aufa</span>
+            </div>
+            <div class="featured-name">
+              <p>I'm <span class="code">Code Diver</span></p>
+            </div>
+            <div class="featured-text-info">
+              <p>Currently learning programming in <b>Codepolitan</b> and <b> Web Programming Unpas</b>.</p>
+            </div>
+            <!-- <div class="featured-text-btn">
                         <button class="btn blue-btn">Hire Me</button>
                         <button class="btn">Download CV <i class="uil uil-file-alt"></i></button>
                     </div> -->
-                    <div class="social_icons">
-                        <div class="icon"><a class="uil uil-instagram" href="https://www.instagram.com/zhauf.a" target="_blank" id="nyala"></a></div>
-                        <div class="icon"><a class="uil uil-linkedin-alt" href="https://www.linkedin.com/in/azharaufa" target="_blank" id="nyala"></a></div>
-                        <div class="icon"><a class="uil uil-github-alt" href="https://www.github.com/Azhar-Aufa" target="_blank" id="nyala" ></a></div>
-                    </div>
-                </div>
-                <div class="featured-image">
-                    <div class="image">
-                        <img src="/img/fotoku.png" alt="avatar">
-                    </div>
-                </div>
-                <div class="scroll-icon-box">
+            <div class="social_icons">
+              <div class="icon"><a class="uil uil-instagram" href="https://www.instagram.com/zhauf.a" target="_blank" id="nyala"></a></div>
+              <div class="icon"><a class="uil uil-linkedin-alt" href="https://www.linkedin.com/in/azharaufa" target="_blank" id="nyala"></a></div>
+              <div class="icon"><a class="uil uil-github-alt" href="https://www.github.com/Azhar-Aufa" target="_blank" id="nyala"></a></div>
+            </div>
+          </div>
+          <!-- <div class="featured-image">
+            <div class="image">
+              <img src="/img/fotoku.png" alt="avatar" />
+            </div>
+          </div> -->
+          <!-- <div class="scroll-icon-box">
                     <a href="#about" class="scroll-btn">
                         <i class="uil uil-mouse-alt"></i>
                         <p>Scroll Down</p>
                     </a>
-                </div>
-
-            </section>
-            <!-- -------------- ABOUT BOX ---------------- -->
-            <section class="section" id="about">
-                <div class="top-header">
-                    <h1>About Me</h1>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <div class="about-info">
-                            <h3>My introduction</h3>
-                            <p>I'm still in the process of completing programming classes at Codepolitan and Web Programming Unpas.
-                            </p>
-                            <!-- <div class="about-btn">
+                </div> -->
+        </section>
+        <!-- -------------- ABOUT BOX ---------------- -->
+        <section class="section" id="about">
+          <div class="top-header">
+            <h1>About Me</h1>
+          </div>
+          <div class="row">
+            <div class="col">
+              <div class="about-info">
+                <h3>My introduction</h3>
+                <p>I'm still in the process of completing programming classes at Codepolitan and Web Programming Unpas.</p>
+                <!-- <div class="about-btn">
                                 <button class="btn">Download CV <i class="uil uil-import"></i></button>
                             </div> -->
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="skills-box">
-                            <div class="skills-header">
-                                <h3>Frontend</h3>
-                            </div>
-                            <div class="skills-list">
-                                <span>HTML</span>
-                                <span>CSS</span>
-                                <span>Bootstrap</span>
-                                <span>JavaScript</span>
-                                <!-- <span>Vue</span>
+              </div>
+            </div>
+            <div class="col">
+              <div class="skills-box">
+                <div class="skills-header">
+                  <h3>Frontend</h3>
+                </div>
+                <div class="skills-list">
+                  <span>HTML</span>
+                  <span>CSS</span>
+                  <span>Bootstrap</span>
+                  <span>JavaScript</span>
+                  <!-- <span>Vue</span>
                                 <span>React</span>
                                 <span>Angular</span> -->
-                            </div>
-                        </div>
-                        <!-- <div class="skills-box">
+                </div>
+              </div>
+              <!-- <div class="skills-box">
                             <div class="skills-header">
                                 <h3>Backend</h3>
                             </div>
@@ -142,106 +131,99 @@
                                 <span>MongoDB</span>
                             </div>
                         </div> -->
-                    </div>
-                </div>
-            </section>
-
-            <!-- -------------- PROJECT BOX ---------------- -->
-
-            <section class="section" id="projects">
-                <div class="top-header">
-                    <h1>Projects</h1>
-                </div>
-                <div class="project-container">
-                    <div class="project-box">
-                        <i class="uil uil-briefcase-alt"></i>
-                        <h3>Completed</h3>
-                        <label>7+ Class Finished</label>
-                    </div>
-                    <div class="project-box">
-                        <i class="uil uil-users-alt"></i>
-                        <h3>Clients</h3>
-                        <label>You</label>
-                    </div>
-                    <div class="project-box">
-                        <i class="uil uil-award"></i>
-                        <h3>Experience</h3>
-                        <label>4+ Months in the field</label>
-                    </div>
-                </div>
-            </section>
-
-            <!-- -------------- CONTACT BOX ---------------- -->
-
-            <section class="section" id="contact">
-                <div class="top-header">
-                    <h1>Get in touch</h1>
-                    <span>Do you have a project in your mind, contact me here</span>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <div class="contact-info">
-                            <h2>Find Me <i class="uil uil-corner-right-down"></i></h2>
-                            <p><i class="uil uil-envelope"></i> Email: azharaufa@gmail.com</p>
-                            <p><i class="uil uil-phone"></i> +62 857345678</p>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="form-control">
-                            <div class="form-inputs">
-                                <input type="text" class="input-field" placeholder="Name">
-                                <input type="text" class="input-field" placeholder="Email">
-                            </div>
-                            <div class="text-area">
-                                <textarea placeholder="Message"></textarea>
-                            </div>
-                            <div class="form-button">
-                                <button class="btn">Send <i class="uil uil-message"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-        </main>
-
-
-        <!-- --------------- FOOTER --------------- -->
-        <footer>
-            <div class="top-footer">
-                <p>Azhar Aufa</p>
             </div>
-            <div class="middle-footer">
-                <ul class="footer-menu">
-                    <li class="footer_menu_list">
-                        <a href="#home">Home</a>
-                    </li>
-                    <li class="footer_menu_list">
-                        <a href="#about">About</a>
-                    </li>
-                    <li class="footer_menu_list">
-                        <a href="#projects">Projects</a>
-                    </li>
-                    <li class="footer_menu_list">
-                        <a href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="footer-social-icons">
-              <div class="icon"><a class="uil uil-instagram" href="https://www.instagram.com/zhauf.a" target="_blank" id="nyala"></a></div>
-              <div class="icon"><a class="uil uil-linkedin-alt" href="https://www.linkedin.com/in/azharaufa" target="_blank" id="nyala"></a></div>
-              <div class="icon"><a class="uil uil-github-alt" href="https://www.github.com/Azhar-Aufa" target="_blank" id="nyala" ></a></div>
-            </div>
-            <div class="bottom-footer">
-                <p>Copyright &copy; <a href="#home" style="text-decoration: none;">Azhar Aufa</a> - All rights reserved
-                </p>
-            </div>
-        </footer>
+          </div>
+        </section>
 
+        <!-- -------------- PROJECT BOX ---------------- -->
+
+        <section class="section" id="projects">
+          <div class="top-header">
+            <h1>Projects</h1>
+          </div>
+          <div class="project-container">
+            <div class="project-box">
+              <i class="uil uil-briefcase-alt"></i>
+              <h3>Completed</h3>
+              <label>7+ Class Finished</label>
+            </div>
+            <div class="project-box">
+              <i class="uil uil-users-alt"></i>
+              <h3>Clients</h3>
+              <label>You</label>
+            </div>
+            <div class="project-box">
+              <i class="uil uil-award"></i>
+              <h3>Experience</h3>
+              <label>4+ Months in the field</label>
+            </div>
+          </div>
+        </section>
+
+        <!-- -------------- CONTACT BOX ---------------- -->
+
+        <section class="section" id="contact">
+          <div class="top-header">
+            <h1>Get in touch</h1>
+            <span>Do you have a project in your mind, contact me here</span>
+          </div>
+          <div class="row">
+            <div class="col">
+              <div class="contact-info">
+                <h2>Find Me <i class="uil uil-corner-right-down"></i></h2>
+                <p><i class="uil uil-envelope"></i> Email: azharaufa@gmail.com</p>
+                <p><i class="uil uil-phone"></i> +62 857345678</p>
+              </div>
+            </div>
+            <div class="col">
+              <div class="form-control">
+                <div class="form-inputs">
+                  <input type="text" class="input-field" placeholder="Name" />
+                  <input type="text" class="input-field" placeholder="Email" />
+                </div>
+                <div class="text-area">
+                  <textarea placeholder="Message"></textarea>
+                </div>
+                <div class="form-button">
+                  <button class="btn">Send <i class="uil uil-message"></i></button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
+
+      <!-- --------------- FOOTER --------------- -->
+      <footer>
+        <div class="top-footer">
+          <p>Azhar Aufa</p>
+        </div>
+        <div class="middle-footer">
+          <ul class="footer-menu">
+            <li class="footer_menu_list">
+              <a href="#home">Home</a>
+            </li>
+            <li class="footer_menu_list">
+              <a href="#about">About</a>
+            </li>
+            <li class="footer_menu_list">
+              <a href="#projects">Projects</a>
+            </li>
+            <li class="footer_menu_list">
+              <a href="#contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-social-icons">
+          <div class="icon"><a class="uil uil-instagram" href="https://www.instagram.com/zhauf.a" target="_blank" id="nyala"></a></div>
+          <div class="icon"><a class="uil uil-linkedin-alt" href="https://www.linkedin.com/in/azharaufa" target="_blank" id="nyala"></a></div>
+          <div class="icon"><a class="uil uil-github-alt" href="https://www.github.com/Azhar-Aufa" target="_blank" id="nyala"></a></div>
+        </div>
+        <div class="bottom-footer">
+          <p>Copyright &copy; <a href="#home" style="text-decoration: none">Azhar Aufa</a> - All rights reserved</p>
+        </div>
+      </footer>
     </div>
-
-
-
 
     <!-- ----- TYPING JS Link ----- -->
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
@@ -251,6 +233,12 @@
 
     <!-- ----- MAIN JS ----- -->
     <script src="./script.js"></script>
-</body>
 
+    <!-- Bootstrap -->
+    <script async src="https://cdn.jsdelivr.net/npm/es-module-shims@1/dist/es-module-shims.min.js" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"> </script>
+    
+    <script src="https://unpkg.com/@popperjs/core@2https://unpkg.com/@popperjs/core@2"></script>
+  </body>
 </html>
